--- a/UnitTestProject3/ZooloskiVrt.Common.Domen.Tests.csproj
+++ b/UnitTestProject3/ZooloskiVrt.Common.Domen.Tests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="PaketTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PaketZivotinjaTests.cs" />
+    <Compile Include="PosetilacTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
