--- a/UnitTestProject3/ZooloskiVrt.Common.Domen.Tests.csproj
+++ b/UnitTestProject3/ZooloskiVrt.Common.Domen.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PaketZivotinjaTests.cs" />
     <Compile Include="PosetilacTests.cs" />
+    <Compile Include="PosetilacPrijavaTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
