Kreirani testovi za klasu Zaposleni

--- a/UnitTestProject3/ZooloskiVrt.Common.Domen.Tests.csproj
+++ b/UnitTestProject3/ZooloskiVrt.Common.Domen.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="PosetilacTests.cs" />
     <Compile Include="PosetilacPrijavaTests.cs" />
     <Compile Include="PrijavaTests.cs" />
+    <Compile Include="ZaposleniTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
