--- a/ZooloskiVrt.Common.Domen.Tests/ZooloskiVrt.Common.Domen.Tests.csproj
+++ b/ZooloskiVrt.Common.Domen.Tests/ZooloskiVrt.Common.Domen.Tests.csproj
@@ -6,11 +6,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E35C331F-3635-405B-8881-0E09DA7127F6}</ProjectGuid>
+    <ProjectGuid>{B84D920E-736E-4ECD-8990-403F360F09A1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary2</RootNamespace>
-    <AssemblyName>ClassLibrary2</AssemblyName>
+    <RootNamespace>ZooloskiVrt.Common.Domen.Tests</RootNamespace>
+    <AssemblyName>ZooloskiVrt.Common.Domen.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="PaketTests.cs" />
     <Compile Include="PaketZivotinjaTests.cs" />
     <Compile Include="PosetilacPrijavaTests.cs" />
