Zavrseni testovi klasa VratiSvePosetioceSO i VratiSvePaketeSO

--- a/ZooVrt.Common.AplicationLogic.Tests/ZooloskiVrt.Server.SistemskeOperacije.Tests.csproj
+++ b/ZooVrt.Common.AplicationLogic.Tests/ZooloskiVrt.Server.SistemskeOperacije.Tests.csproj
@@ -107,6 +107,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VratiSvePaketeSOTests.cs" />
+    <Compile Include="VratiSvePosetioceSOTests.cs" />
     <Compile Include="VratiSveZivotinjeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
