--- a/ZooloskiVrt.Server.Repozitorujum/ZooloskiVrt.Server.Repozitorujum.nuspec
+++ b/ZooloskiVrt.Server.Repozitorujum/ZooloskiVrt.Server.Repozitorujum.nuspec
@@ -2,13 +2,13 @@
 <package >
   <metadata>
     <id>1</id>
-    <version>1.0.0</version>
-    <title>Domenske klase</title>
+    <version>1.0.0.0</version>
+    <title>Komunikacija</title>
     <authors>Ivan Stepanovic</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">FON</license>
     <!-- <icon>icon.png</icon> -->
-    <description>$description$</description>
+    <description>Server repozitorijum</description>
     <releaseNotes>Prvo kreiranje paketa.</releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>Tag 1</tags>
