Promena pozadine kontrola

--- a/ZooloskiVrt.Klijent.Forme/ZooloskiVrt.Klijent.Forme.csproj
+++ b/ZooloskiVrt.Klijent.Forme/ZooloskiVrt.Klijent.Forme.csproj
@@ -175,5 +175,8 @@
       <Name>ZooloskiVrt.Common.Komunikacija</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\122.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
